rust/macros/tests/invalid/target/debug/deps/only_arrow-c6ad3daae7802770.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow-c6ad3daae7802770.d: only_arrow.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libonly_arrow-c6ad3daae7802770.rmeta: only_arrow.rs Cargo.toml

only_arrow.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
